# data-manager-api

./: README.md  azure-pipeline.yaml  pyproject.toml  summary.py
src/: .dev.env  database.py  index.py  settings.py
src/routers/: certification.py  contact.py  past_experience.py  profile.py  programming_skill.py  project.py  resume.py  soft_skill.py  tech_stack.py
src/schemas/: certification.py  contact.py  past_experience.py  profile.py  programming_skill.py  project.py  resume.py  soft_skill.py  tech_stack.py
