[tool.poetry]
name = "data-manager-api"
version = "0.1.0"
description = ""
authors = ["Aafaq Rana <m.aafaq.rana@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
data-manager-library = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
